--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,8 +27,8 @@ build_buster:
     - apt install -y python3-stdeb python-all
     - ./build.sh
     - ls
-    - pwd
-    - ls ..
+    - ls deb_dist
+    - ls dist
     - mkdir -p build/
     - mv ../deb_dist/python3-lustmolch*.deb build/
     - mv ../deb_dist/python3-lustmolch*.changes build/
