--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,11 +27,7 @@ build_buster:
     - apt install -y python3-stdeb python-all
     - ./build.sh
     - mkdir -p build/
-    - mv deb_dist/python3-lustmolch*.deb build/
-    - mv deb_dist/lustmolch*.changes build/
-    - mv deb_dist/lustmolch*.tar.gz build/
-    - mv deb_dist/lustmolch*.dsc build/
-    - mv deb_dist/lustmolch*.buildinfo build/
+    - mv deb_dist/* build/
 
   # The files which are to be made available in GitLab
   artifacts:
