--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,2 @@
 include README.md
-recursive-include templates/host *
-recursive-include templates/container *
+recursive-include lustmolch/templates *
