--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,12 +16,12 @@ before_script:
 
 # Defines stages which are to be executed
 stages:
-  - build_buster
+  - build_bullseye
   - upload_to_repo
 
-# Stage "build_buster"
-build_buster:
-  stage: build_buster
+# Stage "build_bullseye"
+build_bullseye:
+  stage: build_bullseye
   script:
     - apt update
     - apt install -y python3-stdeb python-all
